KULRICE-3860: Make KSB unit tests work with JPA https://test.kuali.org/jira/browse/KULRICE-3860
KULRICE-3887: OptimisticLockExceptions in StoreAndForwardTest when using JPA 
https://test.kuali.org/jira/browse/KULRICE-3887

ForwardedCallHandlerImpl.java:
- now passing on the copy of the PersistedMessage instead of the original

PersistedMessage.java:
- cleaned up imports

MessageQueueDAOJpaImpl.java:
- deleting with an em.merge(...); em.remove(...) instead of JPQL

MessageQueueServiceImpl.java:
- cleaned up imports & formatting

MessageSender.java:
- cleaned up formatting

XmlAsyncTestServiceImpl.java:
- added log message on invocation